--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-    <title>ChenYFanのSSL透明度报告</title>
-   <link rel="apple-touch-icon" sizes="76x76" href="https://img.cyfan.top/pic/img/apple-touch-icon.png">
-<link rel="icon" type="image/png" href="https://img.cyfan.top/pic/img/favicon.png">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
-<meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="ChenYFanのSSL透明度报告">
-<meta name="theme-color" content="#F6B352">
-<meta name="author" content="CYF">
+    <title>SSL透明度报告</title>
+    <link rel="shortcut icon" type="image/x-icon" sizes="16x16 32x32 48x48 64x64" href="https://cdn.jsdelivr.net/npm/mhg@0.0.0/favicon/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="description" content="SSL透明度报告">
+    <meta name="theme-color" content="#F6B352">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.1/dist/semantic.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/suka.css@0.1.2">
     <style>
@@ -32,9 +30,7 @@
         }
     </style>
     <!--[if lt IE 9]><script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3"></script><script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script><![endif]-->
-    <meta property="og:title" content="SSL Status - SukkaLab">
     <meta property="og:type" content="Website">
-    <meta property="og:url" content="https://ssl.cyfan.top">
     <meta name="twitter:card" content="summary">
 </head>
 
