--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
                                 <td>${value.subject}</td>
                             </tr>
                             <tr>
-                                <td class="item-title sk-text-right">SubjectAltName</td>
+                                <td class="item-title sk-text-right">SubjectAlt</td>
                                 <td>${value.subjectAltName}</td>
                             </tr>
                             <tr>
@@ -92,7 +92,7 @@
                                 <td>${value.version}</td>
                             </tr>
                             <tr>
-                                <td class="item-title sk-text-right">SerialNumber</td>
+                                <td class="item-title sk-text-right">Serial</td>
                                 <td>${value.serialNumber}</td>
                             </tr>
                             <tr>
